---------------------------------------------------------------------------------------------------
Version: 1.3.0
Date: 2020.1.30
  Bugfixes:
    - Fixed a crash if a multiplayer save were to be upgraded from 1.1.0 while other players had the GUI open

---------------------------------------------------------------------------------------------------
Version: 1.2.1
Date: 2020.1.28
  Bugfixes:
    - Fixed the "unfixable migration" that prevented a direct upgrade to 1.2

---------------------------------------------------------------------------------------------------
Version: 1.2.0
Date: 2020.1.25
  Features:
    - Updated to Factorio 0.18
    - When using keyboard navigation, the selected item's name will be shown in the text box
    - Shift + selecting an item while in the editor will create an infinity inventory filter for that item
  Optimizations:
    - Significant optimizations to translation library (again!)
    - Optimized text search loop
  Bugfixes:
    - Fixed error when joining a game in the middle of a translation

---------------------------------------------------------------------------------------------------
Version: 1.1.0
Date: 2019.12.27
  Features:
    - Added option to make the GUI appear in the center of the screen
  Changes:
    - Significant optimizations to translation library
    - The cursor is now cleaned before items or ghosts are placed in it
    - The GUI will not open until dictionary translation is finished
  Bugfixes:
    - Fixed a crash on inventory change when requesting more than one item from the logistics network at once
    - Fixed a crash when a mod hardcodes an item's localised name
    - Fixed broken translation of any items that have non-basic localised names
    - Fixed missing locale
    - Fixed not being able to use the mouse to pick a result until after pressing enter
    - Fixed several incorrectly handled edge cases with the GUI navigation
