@@ -45,9 +45,15 @@ data:extend{
   },
   {
     type = 'custom-input',
-    name = 'qis-nav-alt-confirm',
+    name = 'qis-nav-shift-confirm',
     key_sequence = 'SHIFT + ENTER',
     order = 'bf'
+  },
+  {
+    type = 'custom-input',
+    name = 'qis-nav-control-confirm',
+    key_sequence = 'CONTROL + ENTER',
+    order = 'bg'
   }
 }
 
