@@ -5,7 +5,8 @@ qis-nav-down=Navigate down
 qis-nav-left=Navigate left
 qis-nav-right=Navigate right
 qis-nav-confirm=Confirm item selection
-qis-nav-alt-confirm=Confirm item selection (alternate)
+qis-nav-shift-confirm=Confirm item selection (shift)
+qis-nav-control-confirm=Confirm item selection (control)
 
 [mod-setting-name]
 qis-search-inventory=Search in inventory
