@@ -1,6 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.0
 Date: 2020.1.30
+  Changes:
+    - Improved GUI navigation. Pressing escape while selecting a result with keyboard shortcuts will return to the search bar. Pressing escape again will close the GUI.
   Bugfixes:
     - Fixed a crash if a multiplayer save were to be upgraded from 1.1.0 while other players had the GUI open
 
